fixed texts alignment

--- a/src/App.css
+++ b/src/App.css
@@ -517,7 +517,11 @@
   padding-left: 4.3%;
   display: flex;
   align-items: flex-end;
-  border: 1px solid green;
+}
+
+#contacts-texts{
+  padding-left: 5%;
+
 }
 
 /* LANDING PAGE ROOT */
